# GBServer

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.sqlite.yml  docker-compose.yml  justfile
.arts/: settings.json
.claude/: settings.local.json
.github/workflows/: backend-ci.yml  ci.yml  db-features.yml
.qoder/specs/: align-unimplemented-features.md
.sisyphus/: ralph-loop.local.md
.trae/documents/: implementation-plan.md
config/: application.toml  application.yaml
database/: README.md  init-mysql-2.7.4.sql  init-postgresql-2.7.4.sql  init-sqlite-2.7.4.sql
docs/: BACKEND_TESTING.md  BACKEND_TEST_SUMMARY.md  BUILD_AND_RUN.md  DATABASE_COMPATIBILITY.md  DEPLOYMENT_GUIDE.md  INTERFACE_COVERAGE.md  OPERATIONS.md  TEST_REPORT.md  WVP_PARITY_GAP_ANALYSIS.md
docs/debug/: ISSUES.md  SMOKE_REPORT.md  UI_WALKTHROUGH.md
docs/parity/: interface-coverage-phase-0.json  interface-coverage-phase-0.md  wvp-phase-0-parity-audit.json  wvp-phase-0-parity-audit.md
e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
e2e/tests/: smoke.spec.ts
scripts/: api-integration-test-v2.js  api-integration-test.js  build-and-run.ps1  build-and-run.sh  build.ps1  build.sh  init-db-postgres.ps1  phase3-test-matrix.sh  phase5-test-matrix.sh  phase6-test-matrix.sh  run-backend-tests.sh  run.ps1  run.sh  test-all-api.js  verify-backend-tests.sh
scripts/parity-audit/: contract-test.js  extract-interface-coverage.js  extract-wvp-parity.js
src/: auth.rs  cache.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  response.rs  router.rs  rpc.rs  security.rs  state_store.rs
src/cascade/: mod.rs  register.rs
src/cluster/: mod.rs  registry.rs
src/db/: alarm.rs  audit_log.rs  cloud_record.rs  common_channel.rs  device.rs  group.rs  jt1078.rs  media_server.rs  mobile_position.rs  mod.rs  platform.rs  platform_channel.rs  platform_group.rs  platform_region.rs  position_history.rs  record_plan.rs  region.rs  role.rs  stream_proxy.rs  stream_push.rs  user.rs  user_api_key.rs
src/handlers/: alarm.rs  cascade.rs  cloud_record_extra.rs  common_channel.rs  device.rs  device_batch.rs  device_control.rs  device_query.rs  device_stub.rs  front_end.rs  health.rs  jt1078.rs  jt1078_extra.rs  metrics.rs  mod.rs  parity_extras.rs  platform.rs  play.rs  playback.rs  region.rs  role.rs  rtp_control.rs  server.rs  stream.rs  stub.rs  sy_camera.rs  system.rs  talk.rs  user.rs  webrtc.rs  websocket.rs
src/jt1078/: command.rs  command_waiter.rs  frame.rs  jt_media_session.rs  manager.rs  mod.rs  response_parser.rs  server.rs  session.rs
src/middleware/: audit.rs  mod.rs
src/scheduler/: mod.rs  record_plan.rs
src/sip/: config.rs  mod.rs  server.rs
src/state/: mod.rs  repository.rs  stream_status.rs
src/ws/: hub.rs  jwt.rs  mod.rs
src/zlm/: address_builder.rs  auth.rs  client.rs  health_checker.rs  hook.rs  hook_routes.rs  media_node.rs  mod.rs  types.rs
tests/: config_toml_smoke.rs  e2e_test.rs  integration_test.rs  jt1078_e2e_test.rs  jt1078_integration.rs  protocol_harness.rs  zlm_keepalive_config_test.rs
tests/common/: database.rs  env.rs  fixtures.rs  generator.rs  mod.rs  seeder.rs
tests/integration/: sqlite_compat.rs  (+1 more)
web/: README-zh.md  README.md  vue.config.js
(+88 files in other folders)
