[package]
name = "gbserver"
version = "0.1.0"
edition = "2021"
description = "GBServer — GB28181 国标信令、流媒体接入与级联管理平台"

[features]
default = ["sqlite"]
# 数据库三选一：默认 SQLite（轻量、零依赖、适合开发/演示/边缘节点/小规模生产）；
#   MySQL 使用 --no-default-features --features mysql；
#   PostgreSQL 使用 --no-default-features --features postgres
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
# Web
axum = { version = "0.7", features = ["json", "macros", "form", "query", "ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tokio = { version = "1", features = ["full"] }

# 序列化与配置
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库（通过 features 选择 mysql 或 postgres）
sqlx = { version = "0.7", features = ["runtime-tokio", "chrono", "macros"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }

# 鉴权
jsonwebtoken = "9"
md-5 = "0.10"

# 配置
config = "0.14"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误与工具
thiserror = "1"
anyhow = "1"
rand = "0.8"
dashmap = "5"

# SIP/GB28181
quick-xml = "0.31"

# ZLM HTTP API
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Redis
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }

# 网络
bytes = "1"
futures-util = "0.3"

[dev-dependencies]
# 后端测试依赖
tokio = { version = "1", features = ["test-util", "macros"] }
mockall = "0.12"
wiremock = "0.5"
testcontainers = "0.14"
assert_matches = "1.5"
pretty_assertions = "1.4"
fake = "2.6"
axum-test = "7"
criterion = { version = "0.5", features = ["async_tokio"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "gbserver"
path = "src/main.rs"

[[test]]
name = "device_simulator_test"
path = "tests/integration/sip/device_simulator_test.rs"

[[test]]
name = "sqlite_compat"
path = "tests/integration/sqlite_compat.rs"

[profile.release]
lto = true
codegen-units = 1
